# controller_agv_good

./: CMakeLists.txt  README.md  package.xml  rviz_config.rviz
doc/: ardc控制.docx  lqr模型.docx  mpc模型.docx  安装  模糊规则库fuzzylite使用.docx  模糊规则表.docx  模糊规则表.xls  神经网络模糊控制设计流程.docx  阿克曼机器人操作方法.txt
params/: ackermann_params.json  akermann_params_simulate.json  configs.json  configs_simulate.json  global_akermann_wave_front_planner.json  global_gd_smoother.json  laser_2d.json  laser_3d.json  laser_tim_51x_front.json  local_akermann_wave_front_planner.json  local_frenet_optimal_planner.json  local_frenet_polynomial_planner.json  local_gd_smoother.json  local_r_star_planner.json  local_so_smoother.json  navigator.json  robot_config.json  robot_simulate_config.json  sensor.json  tracker_config.json
params/maps/: dongchuang_map.json  dongchuang_map.yaml  map.json  map_company.json  map_maze.json  my_car.yaml  um_park.yaml
ros_ws/ws_hdl/devel/: .catkin  .rosinstall
ros_ws/ws_laser_driver/lslidar_c16_new/devel/: .catkin  local_setup.sh
ros_ws/ws_realsense/src/depth_nav_tools/: laser_filters.launch  laser_range_filter_config.yaml  scan_filter.tar.xz  scan_speckle_filter_config.yaml
ros_ws/ws_stage/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
ros_ws/ws_stage/src/Stage/: CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  Stage.cbp  cmake_install.cmake  cmake_uninstall.cmake  install_manifest.txt  stage-config-version.cmake  stage-config.cmake  stage.pc
ros_ws/ws_stage/src/stage_ros/: CMakeLists.txt
scripts/: build.sh  hdl-location.sh  launch.py  monitor-float.py  monitor.py  open-lslidar-new.sh  publish_dynamic_obstacles .py  publish_static_obstacles.py  ros_pub_reconfig.sh  run_realsense.sh  stage.sh
simulator/stage/: dongchuang.world  my_carlike.world  um_company.world  um_park.world
simulator/stage/robots/: carlike_robot.inc
src/app/: bz_robot.cpp  collision_detector_server.cpp  localization_server.cpp  map_server.cpp  planner_server.cpp  robot_server.cpp  service_server.cpp  smoother_server.cpp  task_server.cpp  tracker_server.cpp
src/app/ros_plugins/: map_to_odom.cpp  ros_interface.cpp
src/common/: angle.h  back_trace.cpp  back_trace.h  common.cpp  common.h  data_types.h  geometry.h  json.hpp  msg_id.h  periodic_task.h  pnm_image.cpp  pnm_image.h  print.cpp  print.h  prune.cpp  prune.h  spline.cpp  spline.h  thread_rpc.h  time_keeper.h  uart.cpp  uart.h
src/common/timer/: timer.cpp  timer.h
src/modules/collision_detector/: collision_detector.cpp  collision_detector.h
src/modules/localization/: localization.h
src/modules/main/: collision_detector_main.cpp  collision_detector_main.h  localization_main.cpp  localization_main.h  map_main.cpp  map_main.h  planner_main.cpp  planner_main.h  robot_main.cpp  robot_main.h  service_main.cpp  service_main.h  smoother_main.cpp  smoother_main.h  task_main.cpp  task_main.h  tracker_main.cpp  tracker_main.h
src/modules/main/ros_plugins/: plugins_ros_debug.cpp  plugins_ros_debug.h  plugins_ros_interface.cpp  plugins_ros_interface.h
src/modules/map/: contour.cpp  contour.h  grid_map.cpp  grid_map.h  grid_map_data.h  grid_map_interface.cpp  grid_map_interface.h  grid_map_server.cpp  grid_map_server.h  image_loader.cpp  image_loader.h  local_grid_map.cpp  local_grid_map.h  map_base.h
src/modules/model/: ackermann_model.cpp  ackermann_model.h
src/modules/planner/: planner_base.h
src/modules/planner/ackermann_wave_front_planner/: ackermann_wave_front_planner.cpp  ackermann_wave_front_planner.h
src/modules/planner/fmm_planner/: fmm_planner.cpp  fmm_planner.h  heap.h
src/modules/planner/frenet_optimal_planner/: cubic_spline_1d.cpp  cubic_spline_1d.h  cubic_spline_2d.cpp  cubic_spline_2d.h  frenet_cartesian.cpp  frenet_cartesian.h  frenet_optimal_planner.cpp  frenet_optimal_planner.h  quartic_polynomial.cpp  quartic_polynomial.h
src/modules/planner/frenet_polynomial_planner/: cubic_spline_1d.cpp  cubic_spline_1d.h  cubic_spline_2d.cpp  cubic_spline_2d.h  frenet_cartesian.cpp  frenet_cartesian.h  frenet_polynomial_planner.cpp  frenet_polynomial_planner.h  order_3rd_polynomial.cpp  order_3rd_polynomial.h  order_5th_polynomial.cpp  order_5th_polynomial.h
src/modules/planner/r_star_planner/: r_star_planner.cpp  r_star_planner.h
src/modules/robot/: body_control.cpp  body_control.h  sensor_base.h  sensor_manager.cpp  sensor_manager.h
src/modules/robot/laser/: laser_base.h  laser_data.h  laser_tim_51x.cpp  laser_tim_51x.h
src/modules/robot/lidar3d/: lidar3d_base.h
src/modules/smoother/: smoother_base.h
src/modules/smoother/gradient_descent_smoother/: bucket_queue.cpp  bucket_queue.h  dynamic_voronoi.cpp  dynamic_voronoi.h  gradient_descent_smoother.cpp  gradient_descent_smoother.h  path_smoother.cpp  path_smoother.h  pose2d.h  vec2d.cpp  vec2d.h  vec2i.h
src/modules/smoother/sample_optimizing_smoother/: path_optimizer.hpp  sample_optimizing_smoother.cpp  sample_optimizing_smoother.h
src/modules/tracker/: tracker_base.h
src/modules/tracker/adrc/: adrc.cpp  adrc.cpp.autosave  adrc.h  adrc_base.cpp  adrc_base.h  adrc_cascade.cpp  adrc_cascade.h  adrc_firstorder.cpp  adrc_firstorder.h  adrc_main.cpp  adrc_secondorder.cpp  adrc_secondorder.h
src/modules/tracker/mpcc/: bounds.cpp  (+35 more)
src/service/: service_base.h  service_connect.h  service_dock.h  service_drive.h  service_get_loc_state.h  service_get_map.h  service_get_map_name.h  service_get_name.h  service_get_path.h  service_get_robot_info.h  service_get_safe_drive.h  service_goto.h  service_manager.cpp  service_manager.h  service_reconfig.h  service_stop.h
src/task/: task_base.h  task_drive.cpp  task_drive.h  task_get_map.h  task_id.h  task_manager.cpp  task_manager.h  task_map.cpp  task_map.h  task_navigation.cpp  task_navigation.h  task_query_status.cpp  task_query_status.h  task_sensor.cpp  task_sensor.h  task_stop.cpp  task_stop.h
third_libs/: eigen3
third_libs/rest_rpc/examples/: CMakeLists.txt
third_libs/rest_rpc/examples/client/: main2.cpp
third_libs/rest_rpc/examples/server/: main.cpp  main2.cpp
(+186 files in other folders)
